--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@
   margin-right: 20px;
   background-color: white;
   border-radius: 50%;
-  padding: 5px 10px;
+  padding: 5px 12px;
   font-family: "B612 Mono", monospace;
   font-weight: 700;
   font-style: normal;
@@ -54,4 +54,11 @@
 .selecionada {
   background-color: aquamarine;
   color: black;
+}
+
+.pontuacao, .pontuacao span {
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 50px;
 }
